--- a/MavenThought.MediaLibrary.Functional.Tests/MavenThought.MediaLibrary.Functional.Tests.csproj
+++ b/MavenThought.MediaLibrary.Functional.Tests/MavenThought.MediaLibrary.Functional.Tests.csproj
@@ -3,22 +3,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{56484E7F-B200-43EF-924B-BAE916E8E631}</ProjectGuid>
+    <ProjectGuid>{21D3105B-1F79-48CE-A66F-1A54795F9799}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MavenThought.MediaLibrary.Core</RootNamespace>
-    <AssemblyName>MavenThought.MediaLibrary.Core</AssemblyName>
+    <RootNamespace>MavenThought.MediaLibrary.Functional.Tests</RootNamespace>
+    <AssemblyName>MavenThought.MediaLibrary.Functional.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <UpgradeBackupLocation />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,36 +33,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp">
-      <HintPath>..\..\Dependecies\WatTmdbv0.5\RestSharp.dll</HintPath>
+    <Reference Include="Gallio">
+      <HintPath>..\packages\mbunit.3.3.454.0\lib\net40\Gallio.dll</HintPath>
+    </Reference>
+    <Reference Include="Gallio40">
+      <HintPath>..\packages\mbunit.3.3.454.0\lib\net40\Gallio40.dll</HintPath>
+    </Reference>
+    <Reference Include="MbUnit">
+      <HintPath>..\packages\mbunit.3.3.454.0\lib\net40\MbUnit.dll</HintPath>
+    </Reference>
+    <Reference Include="MbUnit40">
+      <HintPath>..\packages\mbunit.3.3.454.0\lib\net40\MbUnit40.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WatTmdb">
-      <HintPath>..\..\Dependecies\WatTmdbv0.5\WatTmdb.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MovieLibrary.cs" />
-    <Compile Include="Movie.cs" />
+    <Compile Include="Core\Services\TheMovieDbServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\TheMovieDbService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MavenThought.MediaLibrary.Domain\MavenThought.MediaLibrary.Domain.csproj">
-      <Project>{B0460A37-24B0-4826-8BB7-AFFDA8A40B0F}</Project>
+    <ProjectReference Include="..\main\MavenThought.MediaLibrary.Core\MavenThought.MediaLibrary.Core.csproj">
+      <Project>{56484E7F-B200-43EF-924B-BAE916E8E631}</Project>
+      <Name>MavenThought.MediaLibrary.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\main\MavenThought.MediaLibrary.Domain\MavenThought.MediaLibrary.Domain.csproj">
+      <Project>{b0460a37-24b0-4826-8bb7-affda8a40b0f}</Project>
       <Name>MavenThought.MediaLibrary.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
