--- a/main/MavenThought.MediaLibrary.Desktop/packages.config
+++ b/main/MavenThought.MediaLibrary.Desktop/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="1.1.0.118" />
-  <package id="CommonServiceLocator" version="1.0" />
   <package id="Bootstrapper" version="1.0" />
+  <package id="Bootstrapper.Windsor" version="1.0" />
   <package id="Castle.Core" version="2.5.2" />
   <package id="Castle.Windsor" version="2.5.2" />
+  <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
-  <package id="Bootstrapper.Windsor" version="1.0" />
   <package id="maventhought.commons" version="0.9.3" />
+  <package id="Microsoft.CompilerServices.AsyncTargetingPack" version="1.0.0" targetFramework="net40" />
   <package id="netfx-Guard" version="1.2.0.0" />
   <package id="netfx-System.Windows.Input.DelegateCommand" version="1.0.0.0" />
+  <package id="WpfAnimatedGif" version="1.0" targetFramework="net40" />
 </packages>
